--- a/test.css
+++ b/test.css
@@ -1,13 +1,22 @@
+@font-face {
+    font-family: 'Bebas Neue';
+    src: url('asset/fonts/Bebas_Neue/BebasNeue-Regular.ttf');
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     scrollbar-width: thin;
+    font-family: 'Bebas Neue';
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 body {
-    overflow-x: hidden;
-    
+    overflow: hidden;
 }
 
 header {
@@ -19,6 +28,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: start;
+    z-index: 10;
 }
 
 .header-logo {
@@ -27,14 +37,64 @@ header {
     margin-top: 10vh;
 }
 
+#menu-container {
+    position: relative;
+}
+
 #menu-btn {
-    
+    position: absolute;
+    right: 2vh;
+    top: 2vh;
+    transition: 0.3s ease-in-outs;
+}
+
+#menu-btn:hover {
+    scale: 1.4;
+    cursor: pointer;
+}
+
+#menu {
+    position: relative;
+    right: 0px;
+    z-index: -1;
+    display: none;
+}
+
+#menu-bg {
+    width: 120vw;
+    position: absolute;
+    right: 0;
+    top: -130vh;
+}
+
+#menu-items {
+    position: absolute;
+    display: flex;
+    width: 65vw;
+    justify-content: space-around;
+    align-items: end;
+    top: 8vh;
+    right: 10vh;
+}
+
+a {
+    font-size: 3vh;
+    color: white;
+    text-decoration: none;
+}
+
+.outer-container {
+    height: 100vh;
+    scroll-snap-type: y mandatory;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .container {
     width: 100vw;
-    height: 110vh; 
+    height: 100vh;
     position: relative;
+    scroll-snap-align: start;
 }
 
 .child-img {
@@ -47,4 +107,28 @@ header {
 
 .full-width {
     width: 100%;
+}
+
+#cloud {
+    z-index: -2;
+    animation: 10s cloud-anim linear infinite;
+    bottom: -20vh;
+}
+
+@keyframes cloud-anim {
+    0% {
+        left: -80vw
+    }
+
+    100% {
+        left: 100vw
+    }
+}
+
+#canvas {
+    position: fixed;
+    width: 100vw;
+    height: 30vh;
+    bottom: 0;
+    z-index: 100;
 }
