--- a/home.css
+++ b/home.css
@@ -13,6 +13,7 @@
 
 body {
     scroll-behavior: smooth;
+    scroll-snap-type: none;
 }
 
 header {
@@ -124,8 +125,27 @@ a {
 #canvas {
     position: fixed;
     width: 100vw;
-    height: 30vh;
+    height: 50vh;
     bottom: 0;
     z-index: 100;
     pointer-events: none;
+}
+
+.letter-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    z-index: 10;
+}
+
+.letter-container>img {
+    width: 25vh;
+    margin-right: 30vh;
+    opacity: 0;
+    position: relative;
+    left: 100px;
+    /* Start 100px to the right */
 }
